finished 3adress rework !!!